--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   The hackathon where the participant teams are to present their
                   developments would be conducted during the final hackathon day in
                   which the top 3 winners will be chosen from the industry
-                  specialized judge panel. br The top three developments will be
+                  specialized judge panel. The top three developments will be
                   awarded exciting cash prizes.
                 <!-- <ul id="list-1">
                   <li>1st prize- Rs.50,000.00</li>
