--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                     <div class="label welcome-msg" for="">COMPLETE THE FORM WITH ALL THE RELEVANT DETAILS</div>
                   </div>
                   <div class="field">
-                    <div class="label" for="">Teams can consist of 3 to 6 paticipants</div>
+                    <div class="label" for="">Teams can consist of 3 to 5 participants</div>
                   </div>
 
                   <div class="field ">
@@ -604,11 +604,11 @@
                     <input name="Email-5" id="email3-input" type="email" placeholder="Enter your email" />
                   </div>
                   
-                  <div class="field ">
+                  <!-- <div class="field ">
                     <div class="label">Participant - 6</div>
                     <input name="Participant-6" id="name6-input" type="text" placeholder="Enter your full name" />
                     <input name="Email-6" id="email3-input" type="email" placeholder="Enter your email" />
-                  </div>
+                  </div> -->
 
                   <div class="field">
                     <button class="firstnext next">Next</button>
