--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@ VANTA.NET({
   el: "#home",
   mouseControls: true,
   touchControls: true,
-  gyroControls: false,
+  gyroControls: true,
   minHeight: 200.00,
   minWidth: 200.00,
   scale: 1.00,
