--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="col-md-5">
             <div class="slick-about">
-              <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 1" />
+              <img src="img/prizes.JPG" class="img-fluid rounded d-block mx-auto" alt="Work 1" />
               <!-- <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 2" />
               <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 3" /> -->
             </div>
