--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="col-md-5">
             <div class="slick-about">
-              <img src="img/prizes.JPG" class="img-fluid rounded d-block mx-auto" alt="Work 1" />
+              <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 1" />
               <!-- <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 2" />
               <img src="img/main.jpeg" class="img-fluid rounded d-block mx-auto" alt="Work 3" /> -->
             </div>
@@ -219,14 +219,14 @@
       </div>
     </section>
 
-    <!--pricing section-->
-    <!-- <section class="py-7 bg-dark section-angle top-right bottom-right" id="pricing">
+    <!-- pricing section-->
+    <section class="py-7 bg-dark section-angle top-right bottom-right" id="pricing">
 
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto text-center">
             <h2 class="text-white heading-black" id="awards">AWARDS</h2>
-            <p class="text-light lead">ALL TOP 10 WILL BE AWARDED WITH CASH PRIZES</p>
+            <p class="text-light lead">ALL TOP 3 WILL BE AWARDED WITH CASH PRIZES</p>
           </div>
         </div>
 
@@ -244,7 +244,7 @@
               <div class="card">
 
                 <div>
-                  <img src="img/Winners 2nd place.JPG" alt="">
+                  <img src="img/prizes.JPG" alt="">
                 </div>
 
 
@@ -259,7 +259,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div> 
 
         <!-- <div class="row mt-5">
         <div
@@ -272,16 +272,16 @@
           </p>
           <button class="btn btn-primary">Create your account</button>
         </div>
+      </div> 
       </div> -->
-      <!-- </div> -->
       <!-- /*Image*/ -->
       <!-- <div class="col-md-6 mx-auto text-center mt-5 pt-6">
-        <h2 class="text-white heading-black" id="awards">JUDGES</h2> -->
-        <!-- <p class="text-light lead">Simply pricing - 7 Days free trial</p> -->
-      <!-- </div>
-      <div class="centerflipcards">
+        <h2 class="text-white heading-black" id="awards">JUDGES</h2> 
+        <p class="text-light lead">Simply pricing - 7 Days free trial</p>
+      </div>
+      <div class="centerflipcards"> -->
 
-        <div class="square-flip">
+        <!-- <div class="square-flip">
           <div class="square"
             data-image="https://images.unsplash.com/photo-1477313372947-d68a7d410e9f?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb">
             <div class="square-container">
@@ -291,8 +291,8 @@
 
             </div>
             <div class="flip-overlay"></div>
-          </div>
-          <div class="square2"
+          </div> -->
+          <!-- <div class="square2"
             data-image="https://images.unsplash.com/photo-1477313372947-d68a7d410e9f?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb">
             <div class="square-container2">
               <div class="align-center"></div>
@@ -302,9 +302,9 @@
             </div>
             <div class="flip-overlay"></div>
           </div>
-        </div> -->
+        </div> 
 
-        <!-- <div class="square-flip">
+        <div class="square-flip">
           <div class="square" data-image="http://titanicthemes.com/files/flipbox/kallyas-bundle.png">
             <div class="square-container">
               <div class="align-center">
@@ -348,10 +348,10 @@
         </div>
 
 
-      </div> -->
+      </div>  -->
 
-
-      <!-- <div class="centerflipcards">
+<!-- 
+      <div class="centerflipcards">
         <div class="square-flip">
           <div class="square"
             data-image="https://images.unsplash.com/photo-1477313372947-d68a7d410e9f?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb">
@@ -390,8 +390,8 @@
             </div>
             <div class="flip-overlay"></div>
           </div>
-        </div> -->
-<!-- 
+        </div>
+
         <div class="square-flip">
           <div class="square"
             data-image="https://instagram.fotp3-2.fna.fbcdn.net/t51.2885-15/e35/14712096_386502691740262_2357154798815412224_n.jpg?ig_cache_key=MTM2NzU2MzUwNjQ3OTUzOTgxNQ%3D%3D.2">
