--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <div class="card">
 
                 <div>
-                  <img src="img/Winners 1st place.JPG" alt="">
+                  <img src="img/first.JPG" alt="">
                 </div>
 
 
@@ -244,7 +244,7 @@
               <div class="card">
 
                 <div>
-                  <img src="img/prizes.JPG" alt="">
+                  <img src="img/second.JPG" alt="">
                 </div>
 
 
@@ -252,7 +252,7 @@
               <div class="card">
 
                 <div>
-                  <img src="img/Winners 3rd place.JPG" alt="">
+                  <img src="img/third.JPG" alt="">
                 </div>
 
 
